18_reverse_str/grade.txt
Grading at Wed Jul 24 15:02:19 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:6:12: error: comparison between pointer and integer [-Werror]
   if (*str == NULL || *str == '\0' || *(str+1) =='\0') return;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
